# PiTCT

./: .gitignore  AGENTS.md  LICENSE  README.md  build.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: dispatch.yml  main.yml  release.yml  release_test.yml
docs/: conf.py  index.rst  modules.rst  tctwrap.rst
docs/documents/: install.rst  quick-start.rst
docs/reference/: modules.rst  pytct.rst
examples/: create.py
libtct/: des_data.h  ext_proc.c  program.c  program.h  setup.h  supred.c
pitct/: automaton_display.py  distance.py  name_converter.py  util.py
pytct/: __init__.py  automaton_display.py  config.py  dat_info.py  des.py  des_check.py  des_info.py  distance.py  eventname_conv.py  ext_des_info.py  libtct.c  name_converter.py  simulation.py  tct_typing.py  typing.py
pytct/libtct/: canqc.c  cnorm.c  des_data.h  ex_supred.cpp  higen.c  multiplatio.c  multiplatio.h  obs_check.c  program.c  program.h  tct_io.c  tct_io.h  tct_proc.h
pytct/libtct/mmio/: mmio.h
tctwrap/: __init__.py  config.py  dat_info.py  data.py  des.py  libtct.c
tctwrap/libtct/: des_data.c  des_data.h  meet_x64.cpp  minm.c  program.c  program.h  setup.h  supred.c  supred.h  tct_proc.c  tct_proc.h
tests/: test_config.py  test_dat_info.py  test_des_check.py  test_des_info.py  test_distance.py  test_ext_des_info.py  test_name_converter.py  test_tct_def.py  test_util.py
