[tool.poetry]
name = "PyTCT"
version = "0.0.0"
description = "Python TCT Library"
documentation = "https://omucai.github.io/PyTCT-docs/"
authors = ["Shoma Matsui <matsui@shoma.cc>", "Masahiro Konishi <konikoni428@gmail.com>"]
license = "Apache-2.0"
build = "build.py"
include = [
    { path = "libtct", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
u-msgpack-python = "^2.7.1"
graphviz = "^0.16"
typing-extensions = ">=4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[tool.poetry.group.build.dependencies]
cibuildwheel = "^2.12.0"
poetry2setup = "^1.1.0"
versioneer = "^0.28"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.cibuildwheel]
build = "*"
skip = "*-musllinux_*"
archs = ["auto64"]
before-all = "pip install poetry2setup && poetry2setup > setup.py"

[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"
