[project]
name = "PyTCT"
authors = [
    {name = "Shoma Matsui", email = "matsui@shoma.cc"},
    {name = "Masahiro Konishi", email = "konikoni428@gmail.com"},
]
description = "Python TCT Library"
dynamic = ["version"]
keywords = ["pytct", "control", "discrete"]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "graphviz>=0.16,<0.17",
    "typing-extensions>=4.1.0",
    "u-msgpack-python>=2.7.1,<3.0.0"
]

[project.urls]
documentation = "https://omucai.github.io/PyTCT-docs/"
repository = "https://omucai.github.io/PyTCT/"

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
]

[tool.setuptools.dynamic]
version = {attr = "pytct.version"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pytct*"]
exclude = ["build", "dist", "libtct"]
namespaces = false

[tool.cibuildwheel]
archs = ["auto64"]
build = "*"
build-frontend = "build"
skip = "*-musllinux_*"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
